# Minuet-Lang-Mirror

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  utility.sh
docs/: README.md  grammar.md  vm.md
src/: CMakeLists.txt  main.cpp
src/bcgen/: emitter.cpp
src/driver/: driver.cpp  driver.hpp
src/driver/plugins/: ir_dumper.cpp
src/frontend/: lexicals.hpp  lexing.cpp  lexing.hpp  parsing.cpp  parsing.hpp
src/ir/: cfg.hpp  convert_ast.cpp  convert_ast.hpp  steps.cpp  steps.hpp
src/mintrinsics/: CMakeLists.txt  mnl_stdio.cpp  mnl_stdio.hpp  mnl_strings.cpp  mnl_strings.hpp  mnl_utils.cpp  mnl_utils.hpp
src/runtime/: CMakeLists.txt  bytecode.cpp  bytecode.hpp  fast_value.cpp  fast_value.hpp  heap_storage.cpp  heap_storage.hpp  sequence_value.cpp  sequence_value.hpp  string_value.cpp  string_value.hpp  vm.cpp  vm.hpp
src/semantics/: analyzer.cpp  analyzer.hpp
src/syntax/: exprs.hpp  stmts.hpp
stdlib/: stdio.mnl  strings.mnl  utils.mnl
test_suite/ill_formed/: invalid_detup_lhs.mnl  invalid_detup_rhs.mnl
test_suite/interactive/: simple_readln.mnl  simple_stdin.mnl
test_suite/simple/: hello_world.mnl
test_suite/unused/: hello_world.mnl  manip_strings.mnl  print_arg_0.mnl
